fixed bg alignment

--- a/src/css/imports/_styles.css
+++ b/src/css/imports/_styles.css
@@ -258,7 +258,7 @@
 
 @media (max-width: 767px) {
     .video-div {
-        background: url('/img/video-bg-still.jpg') top center / cover no-repeat;
+        background: url('/img/video-bg-still.jpg') top right / cover no-repeat;
     }
 
     .video-bg {
